# frugal-score

./: .gitignore  README.md  visualisation_change_detection.py  visualisation_classification.py  visualisation_rules.py
LICENSE/: README.md  pyproject.toml
frugalityscore/: __init__.py  mod.py
frugalityscore/models/: models.py
frugalityscore/tracker/: __init__.py
paper/: classif_torch_mnist.py  visualisation_cifar.py
paper/performance-tracking/: LICENSE  README.md
paper/performance-tracking/experiments/conso/: get_conso.py  stats_summary.py  stats_summary_deep.py
paper/performance-tracking/experiments/conso_change/: cd_sklearn_pair_var.py  get_perf.py
paper/performance-tracking/experiments/conso_classif_deep/: classif_deep.py  param_classif_deep_imagenet.yaml  param_classif_deep_squeezenet1_0.yaml
paper/performance-tracking/experiments/conso_clustering/: param_clustering.yaml  param_clustering_blob.yaml  param_clustering_interm.yaml
src/: classif_torch.py  classif_torch_cifar.py  visualisation_imagenet.py
src/outputs/cifar100/: output_cifar_scores.csv  summary_energy.csv  summary_energy_old.csv
src/outputs/imagenet/: output_imagenet_scores.csv
src/performance-tracking/: README.md
src/performance-tracking/experiments/conso/: get_stats.py
src/performance-tracking/experiments/conso_change/: change-detection.py  param_change.yaml
src/performance-tracking/experiments/conso_classif_deep/: classif_deep_cifar.py  classif_deep_mnist.py  param_classif_deep_cifar.yaml  param_classif_deep_densenet121.yaml  param_classif_deep_efficientnet_b0.yaml  (+4 more)
(+1 files in other folders)
